<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tutors"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tutors" />
        <item
            android:id="@+id/nav_schools"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/schools" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/messages" />

            <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/logout" />

    </group>

</menu>
